# bevy-butler

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  build.rs  flake.nix  shell.nix
.github/workflows/: cargo-prerelease.toml  cargo-release-patch.toml  cargo-release.toml  prerelease.yml  release.yml  rust.yml
bevy-butler/: Cargo.toml
bevy-butler-core/: Cargo.toml
bevy-butler-core/src/: lib.rs  plugin.rs
bevy-butler-proc-macro/: Cargo.toml
bevy-butler-proc-macro/src/: butler_plugin_impl.rs  config_systems_impl.rs  lib.rs  system_impl.rs  system_set_impl.rs  utils.rs
bevy-butler-proc-macro/src/add_event/: mod.rs
bevy-butler-proc-macro/src/add_message/: mod.rs
bevy-butler-proc-macro/src/add_observer/: mod.rs  structs.rs
bevy-butler-proc-macro/src/add_plugin/: mod.rs  structs.rs
bevy-butler-proc-macro/src/add_plugin_group/: mod.rs  structs.rs
bevy-butler-proc-macro/src/add_sub_state/: mod.rs
bevy-butler-proc-macro/src/add_system/: mod.rs  structs.rs
bevy-butler-proc-macro/src/add_system_set/: mod.rs  structs.rs
bevy-butler-proc-macro/src/add_to_group/: mod.rs  structs.rs
bevy-butler-proc-macro/src/add_to_plugin/: mod.rs  structs.rs
bevy-butler-proc-macro/src/butler_plugin/: mod.rs
bevy-butler-proc-macro/src/butler_plugin/structs/: butler_plugin_attr.rs  butler_plugin_input.rs  mod.rs  plugin_stage.rs  plugin_stage_data.rs
bevy-butler-proc-macro/src/butler_plugin_group/: mod.rs  structs.rs
bevy-butler-proc-macro/src/config_systems/: mod.rs  structs.rs
bevy-butler-proc-macro/src/config_systems/structs/: mod.rs
bevy-butler-proc-macro/src/custom_system/: mod.rs  structs.rs
bevy-butler-proc-macro/src/event/: mod.rs  structs.rs
bevy-butler-proc-macro/src/insert_resource/: mod.rs
bevy-butler-proc-macro/src/insert_state/: mod.rs  structs.rs
bevy-butler-proc-macro/src/observer/: mod.rs  structs.rs
bevy-butler-proc-macro/src/register_type/: mod.rs  structs.rs
bevy-butler-proc-macro/src/resource/: mod.rs  structs.rs
bevy-butler-proc-macro/src/system/: mod.rs  structs.rs
bevy-butler-proc-macro/src/system/structs/: mod.rs  system_input.rs
bevy-butler-proc-macro/src/system_set/: mod.rs  structs.rs
bevy-butler-proc-macro/src/utils/: mod.rs
bevy-butler/src/: __internal.rs  lib.rs
bevy-butler/src/__internal/: mod.rs  plugin.rs  plugin_group.rs
bevy-butler/tests/: common.rs
bevy-butler/tests/add_event/: event.rs  event_enum.rs  generic_event.rs  main.rs
bevy-butler/tests/add_message/: event.rs  event_enum.rs  generic_event.rs  main.rs
bevy-butler/tests/add_observer/: generic_observer.rs  main.rs  observer.rs  observer_use.rs
bevy-butler/tests/add_plugin/: add_default_plugin.rs  add_plugin.rs  add_to_group.rs  add_unit_plugin.rs  generics_to_group.rs  generics_to_plugin.rs  main.rs
bevy-butler/tests/add_plugin_group/: add_plugin_group.rs  add_plugin_group_to_group.rs  generics_to_plugin.rs  main.rs
bevy-butler/tests/add_resource/: generic_resource.rs  non_send.rs  resource.rs  resource_enum.rs
bevy-butler/tests/add_system/: generic_pipe.rs  generic_system.rs  main.rs  pipe.rs  system.rs  system_expr_schedule.rs  use_declaration.rs
bevy-butler/tests/add_system_set/: add_system_set.rs  config_systems_in_system_set.rs  main.rs  nested_system_set.rs
bevy-butler/tests/add_to_group/: add_to_group.rs  main.rs
bevy-butler/tests/add_to_plugin/: add_group.rs  add_to_plugin.rs  main.rs
bevy-butler/tests/butler_plugin/: butler_plugin.rs  butler_plugin_enum.rs  butler_plugin_impl.rs  main.rs  multiple_build_methods.rs  multiple_plugins.rs
bevy-butler/tests/butler_plugin_group/: butler_plugin_group.rs  main.rs
bevy-butler/tests/config_systems/: config_systems.rs  main.rs  nested_config_systems.rs  system_set_in_config_systems.rs
bevy-butler/tests/event/: event.rs  event_enum.rs  generic_event.rs  main.rs
bevy-butler/tests/generic_system/: main.rs
bevy-butler/tests/insert_resource/: generic_resource.rs  main.rs  non_send.rs  resource.rs  resource_enum.rs
bevy-butler/tests/insert_state/: insert_state.rs  main.rs  with_init.rs
bevy-butler/tests/observer/: main.rs  observer.rs
bevy-butler/tests/register_event/: event.rs  event_enum.rs  generic_event.rs
bevy-butler/tests/register_type/: main.rs  register_type.rs  register_type_enum.rs
bevy-butler/tests/resource/: generic_resource.rs  main.rs  non_send.rs  resource.rs  resource_enum.rs
bevy-butler/tests/system/: generic_pipe.rs  generic_system.rs  main.rs  pipe.rs  system_expr_schedule.rs  use_declaration.rs
bevy-butler/tests/system_set/: nested_system_set.rs
deluxe-vendored/: Cargo.toml  README.md
deluxe-vendored/core/: Cargo.toml  lib.rs  parse_helpers.rs
deluxe-vendored/macros/: Cargo.toml  lib.rs
src/: __internal.rs  lib.rs
src/__internal/: mod.rs
src/__internal/registry/: backend_inventory.rs  backend_linkme.rs  mod.rs
src/core/: mod.rs  plugin.rs
tests/: butler_plugin.rs  common.rs  config_systems.rs  nested_config_systems.rs  system.rs  system_set.rs  test.rs
tests/butler_plugin/: butler_plugin.rs  butler_plugin_impl.rs  main.rs  multiple_build_methods.rs  multiple_plugins.rs
tests/config_systems/: config_systems.rs  default_system_args_internal.rs  main.rs  nested_config_systems.rs  system_set_in_config_systems.rs
tests/event/: event.rs  main.rs
tests/observer/: main.rs  observer.rs  observer_use.rs
tests/register_type/: register_type.rs
tests/resource/: main.rs  resource.rs
tests/system/: custom_system.rs  generic_system.rs  main.rs  system.rs  system_expr_schedule.rs  use_declaration.rs
tests/system_set/: config_systems_in_system_set.rs  main.rs  nested_system_set.rs  system_set.rs
