[workspace]
resolver = "2"
members = [
    "bevy-butler-proc-macro",
    "bevy-butler"
]

[workspace.package]
exclude = [".direnv/", ".vscode/", "Cargo.lock", "*.nix", "flake.lock", ".envrc", ".github/"]

[workspace.dependencies]
bevy_app = { version = "0.16.0", default-features = false }
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_log = { version = "0.16.0", default-features = false }
bevy_state = { version = "0.16.0", default-features = false, features = ["bevy_app"] }
bevy = { version = "0.16.0", default-features = false, features = ["bevy_log"] }
