[workspace]
resolver = "2"
members = [
    "bevy-butler-proc-macro",
    "bevy-butler"
]

[workspace.package]
exclude = [".direnv/", ".vscode/", "Cargo.lock", "*.nix", "flake.lock", ".envrc", ".github/"]

[workspace.dependencies]
bevy_app = { version = "0.16.0", default-features = false }
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_log = { version = "0.16.0", default-features = false }
bevy_state = { version = "0.16.0", default-features = false, features = ["bevy_app"] }
bevy = { version = "0.16.0", default-features = false, features = ["bevy_log", "bevy_state"] }
deluxe = "0.5.0"
deluxe-core = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
sha256 = { version = "1.5.0", default-features = false }
syn = { version = "2.0.96", features = ["full"] }
