[workspace]
resolver = "2"
members = [
    "bevy-butler-proc-macro",
    "bevy-butler"
]

[workspace.package]
exclude = [".direnv/", ".vscode/", "Cargo.lock", "*.nix", "flake.lock", ".envrc", ".github/"]

[workspace.dependencies]
bevy_app = { version = "0.17.0", default-features = false }
bevy_ecs = { version = "0.17.0", default-features = false }
bevy_log = { version = "0.17.0", default-features = false }
bevy_state = { version = "0.17.0", default-features = false, features = ["bevy_app"] }
bevy = { version = "0.17.0", default-features = false, features = ["bevy_log", "bevy_state"] }
deluxe = { version = "0.5.0", path = "deluxe-vendored" }
deluxe-core = { version = "0.5.0", path = "deluxe-vendored/core" }
proc-macro2 = "1.0.93"
quote = "1.0.38"
sha256 = { version = "1.5.0", default-features = false }
syn = { version = "2.0.96", features = ["full"] }
