[package]
name = "bevy-butler-core"
version = "0.1.1"
edition = "2024"
description = "Internal type definitions for bevy-butler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TGRCdev/bevy-butler"

[dependencies]
bevy_app = { version = "0.15.1", default-features = false }
bevy_ecs = { version = "0.15.1", default-features = false }
bevy_log = { version = "0.15.1", default-features = false }
bevy_utils = { version = "0.15.1", default-features = false }
inventory = "0.3.16"
