[package]
name = "bevy-butler-proc-macro"
version = "1.0.0"
edition = "2021"
description = "Procedural macro definitions for bevy-butler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TGRCdev/bevy-butler"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
sha256 = { version = "1.5.0", default-features = false }
syn = { version = "2.0.96", features = ["full"] }

[features]
inventory = []
