[package]
name = "bevy-butler-proc-macro"
version = "0.5.8-alpha.1"
edition = "2021"
description = "Procedural macro definitions for bevy-butler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TGRCdev/bevy-butler"
exclude = [".direnv/", ".vscode/", "Cargo.lock", "*.nix", "flake.lock", ".envrc", ".github/"]

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
deluxe-core = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
sha256 = { version = "1.5.0", default-features = false }
syn = { version = "2.0.96", features = ["full"] }
