[package]
name = "bevy-butler-proc-macro"
version = "0.6.2-alpha.3"
edition = "2021"
description = "Procedural macro definitions for bevy-butler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DragonFoxCollective/bevy-butler"
exclude = [".direnv/", ".vscode/", "Cargo.lock", "*.nix", "flake.lock", ".envrc", ".github/"]

[lib]
proc-macro = true

[dependencies]
deluxe = { workspace = true }
deluxe-core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
sha256 = { workspace = true }
syn = { workspace = true }
