[package]
name = "bevy-butler"
version = "0.6.1"
edition = "2021"
categories = ["game-development", "rust-patterns"]
description = "A crate for making Bevy systems more self-documenting"
keywords = ["game", "gamedev", "bevy", "systems", "macro"]
rust-version = "1.82.0" # Follows bevy 0.16
license = "MIT OR Apache-2.0"
repository = "https://github.com/TGRCdev/bevy-butler"
exclude = [".direnv/", ".vscode/", "Cargo.lock", "*.nix", "flake.lock", ".envrc", ".github/"]

[dependencies]
bevy-butler-proc-macro = { path = "../bevy-butler-proc-macro", version = "0.6.1" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_log = { workspace = true }
inventory = { version = "0.3.17", optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
linkme = "0.3.31"

[target.'cfg(target_arch="wasm32")'.dependencies]
inventory = "0.3.17"

[features]
inventory = ["dep:inventory"]
wasm-experimental = []

[dev-dependencies]
bevy = { workspace = true }
bevy_state = { workspace = true }
wasm-bindgen-test = "0.3.50"
